updated gitignore file THANKS JACKgit add .

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
+# Files to be ignored by Git source control
 Content
-*.pyc
+# Mac System
+.DS_Store
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Environments
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Visual Studios
+.vscode/*
