--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ Flask==1.0.2
 Flask-Cors==3.0.6
 Flask-JWT==0.3.2
 Flask-RESTful==0.3.7
+Flask-SQLAlchemy
 gevent==1.3.6
 glob2==0.6
 gmpy2==2.0.8
@@ -192,6 +193,7 @@ traitlets==4.3.2
 Twisted==18.7.0
 unicodecsv==0.14.1
 urllib3==1.23
+uwsgi  ##remove?
 virtualenv==16.1.0
 wcwidth==0.1.7
 webencodings==0.5.1
